# tcc-instance-segm

./: .gitignore  1-img_viewer.py  Personal-notes.md  README.md  TCC_Segmentação-vf-pos-banca.pdf:Zone.Identifier  activate_env.sh  coco_viewer.py  inference-200.sh  main.py  possible_classes_per_model.py  requirements.txt  run_image_viewer.py  segmentator.py
personal-lib/: README.md  pyproject.toml
personal-lib/personal-lib-ann-logic/: pyproject.toml
personal-lib/personal-lib-core/: pypeojct.toml
personal-lib/personal-lib-inference/: pyproject.toml
personal-lib/personal-lib-plot/: pyproject.toml
personal-lib/personal-lib-pred-logic/: pyproject.toml
personal-lib/personal_lib/coco_ann_parser/: __init__.py  coco_ann_parser.py
personal-lib/personal_lib/core/: __init__.py  annotations.py  predictions.py
personal-lib/personal_lib/eval/: class_dist.py  core.py
personal-lib/personal_lib/inference/: core.py  pred_manager.py  stats_manager.py
personal-lib/personal_lib/plot/: __init__.py  annotations.py  plot_lib.py  predictions.py
segm-lib/: pyproject.toml
segm-lib/segm_lib/: ann_manager.py  annotations.py  coco_ann_parser.py  coco_annotations.py  coco_predictions.py  mask_conversions.py  pred_manager.py  predictions.py
segm-lib/segm_lib/core/: classname_normalization.py  mask_conversions.py
segm-lib/segm_lib/eval/: __init__.py  actual_eval_code.py  cocoapi_wrapper.py  core.py  eval_parser.py  post_processing.py
segm-lib/segm_lib/inference/: core.py  pred_manager.py  raw_prediction.py  stats_manager.py
segm-lib/segm_lib/misc/: coco_utils.py  (+2 more)
(+322 files in other folders)
