[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-lib"
version = "1"
dependencies = [
	# only the easily installable stuff (pip install <whatever>)
	# anything more demanding (like Detectron) is lazy loaded
	"pycocotools",
	"opencv-python",
	"pyyaml",
	"tqdm",
]