[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-lib"
version = "1"
dependencies = [
	"pycocotools",
	"opencv-python",
	"pyyaml",
	"tqdm",
	"numpy",

	# and all the specific things that need to be installed separately, described on the README
]