[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "segm-lib"
version = "1"
dependencies = [
	"pycocotools",
	"opencv-python",
	"pyyaml",
	"tqdm",
	"numpy",
	# Needs more things depending on the functionality you're trying to use.
	# See the individual READMEs for how to install those.
]